Minor Update for demonstration

--- a/EDA_Report_Riedy.Rmd
+++ b/EDA_Report_Riedy.Rmd
@@ -244,4 +244,4 @@ ggplot(summary_by_year, aes(x = year)) +
   )
 ```
 
-This dual-axis line graph compares mean per capita private mental health service utilization (private_util) with mean Google search interest in mental health topics over time. The private utilization is displayed with a solid dark green line, while search interest is shown as a dashed red line, scaled to fit the graph. The visualization provides insight into the relationship between the use of private mental health services and the public's awareness or concern as measured by search trends. This plot helps identify whether changes in private service usage coincide with shifts in search interest, potentially indicating shifts in public awareness or engagement with mental health resource.
+This dual-axis line graph compares mean per capita private mental health service utilization (private_util) with mean Google search interest in mental health topics over time. The private utilization is displayed with a solid dark green line, while search interest is shown as a dashed red line, scaled to fit the graph. The visualization provides insight into the relationship between the use of private mental health services and the public's awareness or concern as measured by search trends. This plot helps identify whether changes in private service usage coincide with shifts in search interest, potentially indicating shifts in public awareness or engagement with mental health resources.
