--- a/EDA_Report_Riedy.Rmd
+++ b/EDA_Report_Riedy.Rmd
@@ -10,6 +10,9 @@ library(readxl)
 library(dplyr)
 library(ggplot2)
 library(scales)
+library(psych)
+library(corrplot)
+library(usmap)
 
 data <- read_excel("Data/googleTrendsMH.xlsx", sheet = "googleTrendsMH")
 ```
@@ -72,14 +75,31 @@ print(table3)
 This table shows the mean number of individuals receiving care for specific diagnoses—such as anxiety, depression, ADHD, bipolar disorder, and trauma/stress-related disorders—across all states. Depression and anxiety stand out as the most common diagnoses, highlighting widespread mental health challenges across the country. By contrasting diagnostic trends across states, this table provides insight into population-level needs and potential diagnostic bias or access issues influencing reporting.
 
 ```{r plot 1}
-ggplot(data, aes(x = median_all_trends, y = total_util)) +
-  geom_point(aes(color = year, shape = region), size = 3, alpha = 0.7) +
-  geom_smooth(method = "lm", se = FALSE, color = "darkred") +
-  labs(title = "Total Mental Health Utilization vs. Search Interest",
-       x = "Median Google Search Interest (All Trends)",
-       y = "Total Per Capita Utilization",
-       color = "Year", 
-       shape = "Region")
+for (i in unique(data$region)){
+  print(ggplot(data %>% filter(region == i), aes(x = median_all_trends, y = total_util)) +
+          geom_point(aes(color = year), size = 3, alpha = 0.7) +
+          geom_smooth(aes(group = year, color = year), method = "lm", se = FALSE) +
+          labs(title = paste("Total Mental Health Utilization vs. Search Interest:", i, "Region"),
+               x = "Median Google Search Interest (All Trends)",
+               y = "Total Per Capita Utilization",
+               color = "Year")
+  )
+}
+
+rm(i)
+
+for (i in unique(data$year)){
+  print(ggplot(data %>% filter(year == i), aes(x = median_all_trends, y = total_util)) +
+          geom_point(aes(color = region), size = 3, alpha = 0.7) +
+          geom_smooth(aes(group = region, color = region), method = "lm", se = FALSE) +
+          labs(title = paste("Total Mental Health Utilization vs. Search Interest in", i),
+               x = "Median Google Search Interest (All Trends)",
+               y = "Total Per Capita Utilization",
+               color = "Region")
+  )
+}
+
+rm(i)
 
 ```
 
@@ -92,25 +112,26 @@ ggplot(data, aes(x = year, y = total_util, color = region)) +
        x = "Year", y = "Mean Total Utilization")
 ```
 
-This line graph illustrates trends in average per capita mental health service utilization across different U.S. regions over time. Each line represents the mean total utilization within a region for a given year, with color used to differentiate between regions. The visualization captures regional variation and temporal trends in mental health care access and use. For example, some regions may demonstrate a steady increase in utilization over time, while others show more variability or stagnation. These patterns can point to disparities in mental health infrastructure, policy, or awareness campaigns, and highlight where further investigation or targeted interventions may be needed.
+This line graph illustrates trends in average per capita mental health service utilization across different U.S. regions over time. Each line represents the mean total utilization within a region for a given year, with color used to differentiate between regions. The visualization captures regional variation and temporal trends in mental health care access and use. For example, some regions may demonstrate a steady increase in utilization over time, while the Southern region shows stagnation. These patterns can point to disparities in mental health infrastructure, policy, or awareness campaigns, and highlight where further investigation or targeted interventions may be needed.
 
 ```{r plot 3}
-latest_year <- max(data$year, na.rm = TRUE)
+data$diagnoses_total <- rowSums(data[, c("anxiety_ct", "depression_ct", "adhd_ct", "bipolar_ct", "trauma_stress_ct")], na.rm = TRUE)
 
-data_latest <- filter(data, year == latest_year)
+data$diagnoses_per_hundthou <- data$diagnoses_total * 100000 / data$population_est
 
-data_latest$diagnoses_total <- rowSums(data_latest[, c("anxiety_ct", "depression_ct", "adhd_ct", "bipolar_ct", "trauma_stress_ct")], na.rm = TRUE)
+for (i in unique(data$year)){
+  print(plot_usmap(data = data %>% filter(year == i), values = "diagnoses_per_hundthou", regions = "states") +
+          scale_fill_continuous(
+            name = "Diagnoses per 100,000",
+            label = scales::comma,
+            low = "lightyellow",
+            high = "darkred"
+            ) +
+          labs(title = paste("Mental Health Diagnoses per 100,000 by State in", i)) +
+          theme(legend.position = "right"))
+}
 
-top_diagnosis_states <- data_latest %>%
-  arrange(desc(diagnoses_total)) %>%
-  head(10)
-
-ggplot(top_diagnosis_states, aes(x = reorder(state, diagnoses_total), y = diagnoses_total)) +
-  geom_col(fill = "steelblue") +
-  coord_flip() +
-  labs(title = paste("Top 10 States by Total Mental Health Diagnoses in", latest_year),
-       x = "State", y = "Total Diagnoses (Anxiety, Depression, etc.)") + 
-  scale_y_continuous(labels = label_comma())
+rm(i)
 ```
 This horizontal bar chart displays the ten states with the highest total number of reported mental health diagnoses in the most recent year of available data (as determined by the dataset). The diagnoses include anxiety, depression, ADHD, bipolar disorder, and trauma-related stress. By aggregating these categories into a single metric (`diagnoses_total`), this visualization provides a snapshot of the states with the greatest mental health treatment burden. States are ranked in descending order, making it easy to compare the relative magnitude of cases across regions. This plot can help prioritize resource allocation, policy attention, and further research into population mental health needs in the most affected areas.
 
@@ -129,6 +150,7 @@ ggplot(summary_by_year, aes(x = year)) +
     name = "Mean Total Utilization (Per Capita)",
     sec.axis = sec_axis(~ . * 100, name = "Mean Google Search Interest (0-100 Scale)")
   ) +
+  scale_x_continuous(breaks = unique(summary_by_year$year)) +
   scale_color_manual(values = c("Total Utilization" = "steelblue", "Search Interest" = "darkred")) +
   labs(
     title = "Mean Mental Health Utilization vs. Search Interest Over Time",
@@ -145,35 +167,38 @@ ggplot(summary_by_year, aes(x = year)) +
 This dual-axis line chart compares the mean per capita mental health service utilization (`total_util`) with average Google search interest in mental health-related terms (`mean_all_trends`) across all states, over time. To enable meaningful visual comparison, search interest (originally on a 0–100 scale) is scaled down on the primary y-axis and also displayed on a secondary y-axis in its original form. The solid blue line represents mental health service use, while the dashed red line reflects online search trends. The chart offers insight into whether public awareness or concern—reflected in search behavior—moves in tandem with actual utilization of mental health services. Patterns of convergence or divergence between the two lines over time may inform whether increases in search interest precede or lag changes in service demand, which is valuable for proactive mental health planning and outreach.
 
 ```{r plot 5}
-data_latest$diagnoses_total <- rowSums(data_latest[, c("anxiety_ct", "depression_ct", "adhd_ct", "bipolar_ct", "trauma_stress_ct")], na.rm = TRUE)
+for (i in unique(data$year)){
+  print(plot_usmap(data = data %>% filter(year == i), values = "state_util", regions = "states") +
+          scale_fill_continuous(
+            name = "Public Utilizaion Rate",
+            label = scales::comma,
+            low = "lightyellow",
+            high = "darkred"
+            ) +
+          labs(title = paste("Public Utilizaion Rates by State in", i)) +
+          theme(legend.position = "right"))
+}
 
-top_public_utillization_states <- data_latest %>%
-  arrange(desc(state_util)) %>%
-  head(10)
-
-ggplot(top_public_utillization_states, aes(x = reorder(state, state_util), y = diagnoses_total)) +
-  geom_col(fill = "steelblue") +
-  coord_flip() +
-  labs(title = paste("Top 10 States by Public Utilizaion in", latest_year),
-       x = "State", y = "Total Diagnoses (Anxiety, Depression, etc.)") + 
-  scale_y_continuous(labels = label_comma())
+rm(i)
 ```
 
 This horizontal bar chart highlights the top 10 states with the highest public mental health service utilization (`state_util`) in the most recent year of the dataset. States are sorted by utilization, and the bars represent the total number of mental health-related diagnoses, including anxiety, depression, ADHD, bipolar disorder, and trauma-related conditions. The visualization allows for a quick comparison between states with the most active public service usage and the corresponding mental health burden. It provides insight into whether states with higher utilization are also experiencing a greater volume of mental health diagnoses, which may indicate stronger reporting, access to care, or elevated need.
 
 ```{r plot 6}
-data_latest$diagnoses_total <- rowSums(data_latest[, c("anxiety_ct", "depression_ct", "adhd_ct", "bipolar_ct", "trauma_stress_ct")], na.rm = TRUE)
-
-top_private_utillization_states <- data_latest %>%
-  arrange(desc(private_util)) %>%
-  head(10)
-
-ggplot(top_private_utillization_states, aes(x = reorder(state, private_util), y = diagnoses_total)) +
-  geom_col(fill = "steelblue") +
-  coord_flip() +
-  labs(title = paste("Top 10 States by Private Utilizaion in", latest_year),
-       x = "State", y = "Total Diagnoses (Anxiety, Depression, etc.)") + 
-  scale_y_continuous(labels = label_comma())
+### Removing, as we are focusing on public usage, not private
+# for (i in unique(data$year)){
+#   print(plot_usmap(data = data %>% filter(year == i), values = "private_util", regions = "states") +
+#           scale_fill_continuous(
+#             name = "Private Utilizaion Rate",
+#             label = scales::comma,
+#             low = "lightyellow",
+#             high = "darkred"
+#             ) +
+#           labs(title = paste("Private Utilizaion Rates by State in", i)) +
+#           theme(legend.position = "right"))
+# }
+# 
+# rm(i)
 ```
 
 This chart displays the top 10 states with the highest private sector mental health service utilization (`private_util`) in the latest available year. Each bar reflects the total number of mental health diagnoses (covering anxiety, depression, ADHD, bipolar disorder, and trauma-related conditions) for each state. The visualization allows us to examine whether high levels of private utilization correspond to a greater mental health burden. It offers insight into how the private healthcare system is being leveraged across different states and can help identify regions with strong insurance access or provider networks supporting mental health care.
@@ -193,6 +218,7 @@ ggplot(summary_by_year, aes(x = year)) +
     name = "Mean Public Utilization (Per Capita)",
     sec.axis = sec_axis(~ . * 100, name = "Mean Google Search Interest (0-100 Scale)")
   ) +
+  scale_x_continuous(breaks = unique(summary_by_year$year)) +
   scale_color_manual(values = c(
     "Public Utilization" = "steelblue",
     "Search Interest" = "darkred"
@@ -227,6 +253,7 @@ ggplot(summary_by_year, aes(x = year)) +
     name = "Mean Private Utilization (Per Capita)",
     sec.axis = sec_axis(~ . * 100, name = "Mean Google Search Interest (0-100 Scale)")
   ) +
+  scale_x_continuous(breaks = unique(summary_by_year$year)) +
   scale_color_manual(values = c(
     "Private Utilization" = "darkgreen",
     "Search Interest" = "darkred"
